swagger, fix and collection
