# src/routes/circulation.routes.js
@@ -6,5 +6,6 @@ router.get("/customer/:id", circulationController.getCustomerCirculation.bind(ci
 router.post("/issue", circulationController.issue.bind(circulationController));
 router.post("/return", circulationController.return.bind(circulationController));
 router.post("/renew", circulationController.renew.bind(circulationController));
+//router.get("/customer/:id", circulationController.getByCustomer.bind(circulationController));
 
 module.exports = router;
